basic styling setup

--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
   <head>
     <meta charset='utf-8'>
      <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+     <link rel="stylesheet" href="./styles.css">
      <title>fireside</title>
   </head>
   <body>
-    <main>
+    <div class="container">
+      <header>
         <h1>fireside</h1>
         <p>take a gander at this, won't you?</p>
-    </main>
+        <nav class="ripples">
+          <button>menu</button>
+        </nav>
+      </header>
+      <main> 
+      </main>
+    </div>
   </body>
