add button hover effect

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset='utf-8'>
      <meta name='viewport' content='width=device-width, initial-scale=1.0'>
      <link rel="stylesheet" href="./styles.css">
+     <link rel="stylesheet" href="./animations.css">
+     <script src="jquery-3.7.1.min.js"></script>
+     <script src="./script.js"></script>
      <title>fireside</title>
   </head>
   <body>
@@ -12,7 +15,8 @@
         <h1>fireside</h1>
         <p>take a gander at this, won't you?</p>
         <nav class="ripples">
-          <button>menu</button>
+          <span class="circle" id="circle"></span>
+          <button><p>menu</p></button>
         </nav>
       </header>
       <main> 
