took a crack at the menu opening (working for a second, but not now)

--- a/index.html
+++ b/index.html
@@ -6,20 +6,24 @@
      <link rel="stylesheet" href="./styles.css">
      <link rel="stylesheet" href="./animations.css">
      <script src="jquery-3.7.1.min.js"></script>
-     <script src="./script.js"></script>
+     <script src="./script.js" defer></script>
      <title>fireside</title>
   </head>
   <body>
-    <div class="container">
-      <header>
-        <h1>fireside</h1>
-        <p>take a gander at this, won't you?</p>
-        <nav class="ripples">
-          <span class="circle" id="circle"></span>
-          <button><p>menu</p></button>
-        </nav>
-      </header>
-      <main> 
-      </main>
-    </div>
+    <div class="sides">
+      <div class="bar"></div>
+      <div class="container">
+        <header>
+          <h1>fireside</h1>
+          <p>take a gander at this, won't you?</p>
+          <nav class="ripples">
+            <span class="circle" id="circle"></span>
+            <button class="btn cbtn">menu</button>
+          </nav>
+        </header>
+        <main> 
+        </main>
+      </div>
+      <div class="bar"></div>
+    </div>>  
   </body>
