reset to the point where the button was working

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <p>take a gander at this, won't you?</p>
           <nav class="ripples">
             <span class="circle" id="circle"></span>
-            <button class="btn cbtn">menu</button>
+            <button class="btn">menu</button>
           </nav>
         </header>
         <main> 
