--- a/index.html
+++ b/index.html
@@ -18,12 +18,21 @@
           <p>take a gander at this, won't you?</p>
           <nav class="ripples">
             <span class="circle" id="circle"></span>
-            <button class="btn">menu</button>
+            <button class="btn">
+              <div class="elipsis">
+              <div class="dot"></div>
+              <div class="dot"></div>
+              <div class="dot"></div>
+              </div>
+            </button>
           </nav>
         </header>
-        <main> 
+        <main class="flex">
+          <div class="sidedeco"></div>
+          <article></article> 
+          <div class="sidedeco"></div>
         </main>
       </div>
       <div class="bar"></div>
-    </div>>  
+    </div>  
   </body>
