add footer fix decoraions

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      <title>fireside</title>
   </head>
   <body>
-    <div class="sides">
+    <div class="flex">
       <div class="bar"></div>
       <div class="container">
         <header>
@@ -34,5 +34,9 @@
         </main>
       </div>
       <div class="bar"></div>
-    </div>  
+    </div>
+    <footer><ul>
+      <li>stuff</li>
+      <li>things</li>
+    </ul></footer>  
   </body>
