fixed some positioning stuff and experimented with loading the navigation

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
      <meta name='viewport' content='width=device-width, initial-scale=1.0'>
      <link rel="stylesheet" href="./styles.css">
      <link rel="stylesheet" href="./animations.css">
-     <script src="jquery-3.7.1.min.js"></script>
+     <script src="./jquery-3.7.1-min.js"></script>
      <script src="./script.js" defer></script>
      <title>fireside</title>
   </head>
@@ -20,23 +20,25 @@
             <span class="circle" id="circle"></span>
             <button class="btn">
               <div class="elipsis">
-              <div class="dot"></div>
-              <div class="dot"></div>
-              <div class="dot"></div>
+               <div class="dot"></div>
+               <div class="dot"></div>
+               <div class="dot"></div>
               </div>
             </button>
           </nav>
         </header>
         <main class="flex">
           <div class="sidedeco"></div>
-          <article></article> 
+          <article class="focus"><p>thre's like stuff here dude</p></article> 
           <div class="sidedeco"></div>
         </main>
       </div>
       <div class="bar"></div>
     </div>
-    <footer><ul>
-      <li>stuff</li>
-      <li>things</li>
-    </ul></footer>  
+    <footer>
+      <ul>
+        <li>stuff</li>
+        <li>things</li>
+      </ul>
+    </footer> 
   </body>
