--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </header>
         <main class="flex">
           <div class="sidedeco"></div>
-          <article class="focus"><p>thre's like stuff here dude</p></article> 
+          <article class="focus"><p>thre's like stuff here bruh</p></article> 
           <div class="sidedeco"></div>
         </main>
       </div>
